Fixed audit event calling