@@ -3,9 +3,11 @@ package com.bgsoftware.superiorskyblock.commands.player;
 import com.bgsoftware.superiorskyblock.SuperiorSkyblockPlugin;
 import com.bgsoftware.superiorskyblock.api.wrappers.SuperiorPlayer;
 import com.bgsoftware.superiorskyblock.commands.ISuperiorCommand;
+import com.bgsoftware.superiorskyblock.core.events.plugin.PluginEventsFactory;
 import com.bgsoftware.superiorskyblock.core.messages.Message;
 import org.bukkit.command.CommandSender;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -13,7 +15,7 @@ public class CmdAudit implements ISuperiorCommand {
 
     @Override
     public List<String> getAliases() {
-        return List.of("audit");
+        return Collections.singletonList("audit");
     }
 
     @Override
@@ -49,7 +51,7 @@ public class CmdAudit implements ISuperiorCommand {
     @Override
     public void execute(SuperiorSkyblockPlugin plugin, CommandSender sender, String[] args) {
         SuperiorPlayer superiorPlayer = plugin.getPlayers().getSuperiorPlayer(sender);
-        plugin.getEventsBus().callAuditOpenEvent(superiorPlayer);
+        PluginEventsFactory.callAuditOpenEvent(superiorPlayer);
     }
 
     @Override
